--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,21 +9,24 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: code checkout
+        uses: actions/checkout@v2
 
-    - name: code checkout
-      uses: actions/checkout@v2
+      - name: Authenticate with Google Cloud
+        uses: google-github-actions/auth@v0
+        with:
+          credentials: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
 
-    - name: install the gcloud cli
-      uses: google-github-actions/setup-gcloud@v2
-      with:
-        project_id: ${{ secrets.GOOGLE_PROJECT }}
-        service_account_key: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
-        export_default_credentials: true
+      - name: install the gcloud cli
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: ${{ secrets.GOOGLE_PROJECT }}
+          version: 'latest'
 
-    - name: build and push the docker image
-      env:
-        GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
-      run: |
-        gcloud auth configure-docker us.gcr.io
-        docker build -t us.gcr.io/$GOOGLE_PROJECT/kode-front-img .
-        docker push us.gcr.io/$GOOGLE_PROJECT/kode-front-img
+      - name: build and push the docker image
+        env:
+          GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
+        run: |
+          gcloud auth configure-docker us.gcr.io
+          docker build -t us.gcr.io/$GOOGLE_PROJECT/kode-front-img .
+          docker push us.gcr.io/$GOOGLE_PROJECT/kode-front-img
