--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,6 +27,6 @@ jobs:
         env:
           GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
         run: |
-          gcloud auth configure-docker us.gcr.io
-          docker build -t us.gcr.io/$GOOGLE_PROJECT/kode-front-img .
-          docker push us.gcr.io/$GOOGLE_PROJECT/kode-front-img
+          gcloud auth configure-docker gcr.io
+          docker build -t gcr.io/$GOOGLE_PROJECT/andi-img .
+          docker push gcr.io/$GOOGLE_PROJECT/andi-img
